fix: reformat recipe steps to wrap and overflow correctly

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,3 +1,9 @@
 .is-panel-input-field {
     width: 100%;
 }
+
+.text-has-no-overflow {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
